<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    app:cardElevation="0dp"
    tools:context=".DamageListActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bodyDamage"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:stretchColumns="*">
        <TextView
            android:id="@+id/tvName"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:text="@string/furniture_damage_name"
            android:textAppearance="?textAppearanceHeadline6"
            android:layout_gravity="left"
            android:background="@color/purple_200"
            android:layout_height="45dp"
            android:layout_width="100dp"/>

        <TextView
            android:id="@+id/tvReason"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:background="@color/purple_200"
            android:textAppearance="?textAppearanceHeadline6"
            android:text="@string/furniture_damage_reason"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/tvCondition"
            android:layout_height="45dp"
            android:layout_width="100dp"
            android:text="@string/furniture_damage_condition"
            android:background="@color/purple_200"
            android:textAppearance="?textAppearanceHeadline6"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:layout_gravity="left"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>